--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
-  <jsp-config>
-    <jsp-property-group>
-      <url-pattern>*.jsp</url-pattern>
-      <include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
-    </jsp-property-group>
-  </jsp-config>
+  <filter>
+    <filter-name>Set Character Encoding</filter-name>
+    <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+      <param-name>ignore</param-name>
+      <param-value>false</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>Set Character Encoding</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+<!--
+  <filter>
+    <filter-name>MapsToSessionAttribute Filter</filter-name>
+    <filter-class>filters.MapsToSessionAttribute</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>MapsToSessionAttribute Filter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+-->
 </web-app>
