--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
   </dependencies>
 
   <build>
-    <finalName>sitesEscalde</finalName>
+    <finalName>sites</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
